# projectdawn

./: CMakeLists.txt  CmakeLists.txt
BlueDawn/: CmakeLists.txt
BlueDawn/include/: BlueDawn.hpp
BlueDawn/src/: BlueDawn.cpp
GreenDawn/: CmakeLists.cmake  CmakeLists.txt
GreenDawn/include/: GreenDawn.hpp
GreenDawn/src/: GreenDawn.cpp
NDFramework/: CMakeLists.txt  NDFramework.hpp
NewDawn/: CMakeLists.txt  CmakeLists.txt
NewDawn/src/: main.cpp
RedDawn/: CmakeLists.txt
RedDawn/include/: RedDawn.hpp
RedDawn/src/: RedDawn.cpp
